--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Welcome to...</h1>
     <img th:src="@{/images/TacoCloud.png}" alt="Taco Cloud Logo">
+    <button onclick="location.href='/design'" type="button">Start Order</button>
 </body>
 </html>
