--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -11,16 +11,17 @@
 
     <form method="POST" th:object="${taco}">
         <span class="validation-error"
-              th:if="#{fields.hasErrors('ingredientRefs')}"
-              th:errors="*{ingredientRefs}">Ingredients error</span>
+              th:if="#{fields.hasErrors('ingredients')}"
+              th:errors="*{ingredients}">Ingredients error</span>
         <div class="grid">
             <div class="ingredient-group" id="wraps">
                 <h3> What to wrap with:</h3>
-                    <!-- Loops thru list corresponding to key value (we added model attributes by type)
-                         not too sure what field does, value determines what checking the box means
+                    <!--
+                        Loops through list corresponding to key value (we added model attributes by type)
+                         field determines where value of object is stored, value determines what checking the box means
                      -->
                     <div th:each="ingredient: ${wrap}">
-                        <input type="checkbox" th:field="*{ingredientRefs}" th:value="${ingredient.id}">
+                        <input type="checkbox" th:field="*{ingredients}" th:value="${ingredient.id}">
                         <span th:text="${ingredient.name}">INGREDIENT</span>
                         <br>
                     </div>
@@ -29,7 +30,7 @@
             <div class="ingredient-group" id="proteins">
                 <h3>Pick your protein:</h3>
                 <div th:each="ingredient: ${protein}">
-                    <input type="checkbox" th:field="*{ingredientRefs}" th:value="${ingredient.id}">
+                    <input type="checkbox" th:field="*{ingredients}" th:value="${ingredient.id}">
                     <span th:text="${ingredient.name}">INGREDIENT</span>
                     <br>
                 </div>
@@ -38,7 +39,7 @@
             <div class="ingredient-group" id="cheeses">
                 <h3>Choose your cheese:</h3>
                 <div th:each="ingredient: ${cheese}">
-                    <input type="checkbox" th:field="*{ingredientRefs}" th:value="${ingredient.id}">
+                    <input type="checkbox" th:field="*{ingredients}" th:value="${ingredient.id}">
                     <span th:text="${ingredient.name}">INGREDIENT</span>
                     <br>
                 </div>
@@ -47,7 +48,7 @@
             <div class="ingredient-group" id="veggies">
                 <h3>Vitalize with veggies:</h3>
                 <div th:each="ingredient: ${veggies}">
-                    <input type="checkbox" th:field="*{ingredientRefs}" th:value="${ingredient.id}">
+                    <input type="checkbox" th:field="*{ingredients}" th:value="${ingredient.id}">
                     <span th:text="${ingredient.name}">INGREDIENT</span>
                     <br>
                 </div>
@@ -56,7 +57,7 @@
             <div class="ingredient-group" id="sauce">
                 <h3>Select your sauce:</h3>
                 <div th:each="ingredient: ${sauce}">
-                    <input type="checkbox" th:field="*{ingredientRefs}" th:value="${ingredient.id}">
+                    <input type="checkbox" th:field="*{ingredients}" th:value="${ingredient.id}">
                     <span th:text="${ingredient.name}">INGREDIENT</span>
                     <br>
                 </div>
